5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4065/executions/1668_2967.log
== TEST (2019-04-15 19:24:27) 
-- CODE:
altura1 = float(input("altura: "))
altura2 = float(input("altura: "))

if(altura1 > 1.37):
	print("sim")
	print(altura1)
else:
	print("nao")
	print(altura1)

-- OUTPUT:
nao
1.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:24:40) 
-- CODE:
altura1 = float(input("altura: "))
altura2 = float(input("altura: "))

if(altura1 > 1.37):
	print("sim")
	print(altura1)
else:
	print("nao")
	print(altura1)

-- EXECUTION TIME:
0.229602
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
nao
1.25
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
nao
1.2
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
sim
1.85
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:24:47) 
-- CODE:
altura1 = float(input("altura: "))
altura2 = float(input("altura: "))

if(altura1 > 1.37):
	print("sim")
	print(altura1)
else:
	print("nao")
	print(altura1)

-- EXECUTION TIME:
0.131296
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
nao
1.25
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
nao
1.2
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
sim
1.85
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:25:03) 
-- CODE:
altura1 = float(input("altura: "))
altura2 = float(input("altura: "))

if(altura1 > 1.37):
	print("sim")
	print(altura2)
else:
	print("nao")
	print(altura1)

-- OUTPUT:
nao
1.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:25:16) 
-- CODE:
altura1 = float(input("altura: "))
altura2 = float(input("altura: "))

if(altura1 > 1.37):
	print("sim")
	print(altura2)
else:
	print("nao")
	print(altura1)

-- EXECUTION TIME:
0.236042
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
nao
1.25
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
nao
1.2
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
sim
1.9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:25:24) 
-- CODE:
altura1 = float(input("altura: "))
altura2 = float(input("altura: "))

if(altura1 > 1.37):
	print("sim")
	print(altura1)
else:
	print("nao")
	print(altura2)

-- OUTPUT:
nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:25:35) 
-- CODE:
altura1 = float(input("altura: "))
altura2 = float(input("altura: "))

if(altura1 > 1.37):
	print("sim")
	print(altura1)
else:
	print("nao")
	print(altura2)

-- EXECUTION TIME:
0.170212
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
nao
1.26
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
nao
1.53
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
sim
1.85
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:25:57) 
-- CODE:
altura1 = float(input("altura: "))
altura2 = float(input("altura: "))

if(altura1 > 1.37):
	print("sim")
	print(altura1)
else:
	print("nao")
	print(altura2)

-- OUTPUT:
nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:26:18) 
-- CODE:
altura1 = float(input("altura: "))
altura2 = float(input("altura: "))

if(altura1 > 1.37):
	print("sim")
	print(altura1)
else:
	print("nao")
	print(altura2)

-- OUTPUT:
nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:26:58) 
-- CODE:
altura1 = float(input("altura: "))
altura2 = float(input("altura: "))

if(altura1 > 1.37):
	print("Sim")
	print(altura1)
else:
	print("Nao")
	print(altura2)

-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:27:12) 
-- CODE:
altura1 = float(input("altura: "))
altura2 = float(input("altura: "))

if(altura1 > 1.37):
	print("Sim")
	print(altura1)
else:
	print("Nao")
	print(altura2)

-- EXECUTION TIME:
0.147858
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
Nao
1.26
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
Nao
1.53
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
Sim
1.85
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:27:33) 
-- CODE:
altura1 = float(input("altura: "))
altura2 = float(input("altura: "))

if(altura1 > 1.37):
	print("Sim")
	print(altura1)
else:
	print("Nao")
	print(altura2)

-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:27:42) 
-- CODE:
altura1 = float(input("altura: "))
altura2 = float(input("altura: "))

if(altura1 > 1.37):
	print("Sim")
	print(altura1)
else:
	print("Nao")
	print(altura2)

-- EXECUTION TIME:
0.22229
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
Nao
1.26
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
Nao
1.53
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
Sim
1.85
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:30:53) 
-- CODE:
altura1 = float(input("altura: "))
altura2 = float(input("altura: "))

if(altura1 > 1.37):
	print("Sim")
	print(altura1)
else:
	print("Nao")
	print(altura2)

-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:31:07) 
-- CODE:
altura1 = float(input("altura: "))
altura2 = float(input("altura: "))

if(altura1 > 1.37):
	print("Sim")
	print(altura1)
else:
	print("Nao")
	print(altura2)

-- EXECUTION TIME:
0.179142
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
Nao
1.26
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
Nao
1.53
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
Sim
1.85
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:31:32) 
-- CODE:
altura1 = float(input("altura: "))
altura2 = float(input("altura: "))

if(altura1 > 1.37):
	print("Sim")
	print(altura1)
else:
	print("Nao")
	print(altura2)

-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:31:45) 
-- CODE:
altura1 = float(input("altura: "))
altura2 = float(input("altura: "))

if(altura1 > 1.37):
	print("Sim")
	print(altura1)
else:
	print("Nao")
	print(altura2)

-- EXECUTION TIME:
0.20763
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
Nao
1.26
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
Nao
1.53
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
Sim
1.85
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:32:03) 
-- CODE:
altura1 = float(input("altura: "))
altura2 = float(input("altura: "))

if(altura1 > 1.37):
	print("Sim")
	print(altura1)
else:
	print("Nao")
	print(altura2)

-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:32:18) 
-- CODE:
altura1 = float(input("altura: "))
altura2 = float(input("altura: "))

if(altura1 > 1.37):
	print("Sim")
	print(altura1)
else:
	print("Nao")
	print(altura2)

-- EXECUTION TIME:
0.185942
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
Nao
1.26
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
Nao
1.53
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
Sim
1.85
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:32:24) 
-- CODE:
altura1 = float(input("altura: "))
altura2 = float(input("altura: "))

if(altura1 > 1.37):
	print("Sim")
	print(altura1)
else:
	print("Nao")
	print(altura2)

-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:34:03) 
-- CODE:
altura1 = float(input("altura: "))
altura2 = float(input("altura: "))

if(altura1 >= 1.37):
	print("Sim")
	print(altura1)
else:
	print("Nao")
	print(altura2)

-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:34:12) 
-- CODE:
altura1 = float(input("altura: "))
altura2 = float(input("altura: "))

if(altura1 >= 1.37):
	print("Sim")
	print(altura1)
else:
	print("Nao")
	print(altura2)

-- EXECUTION TIME:
0.194016
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
Nao
1.26
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
Nao
1.53
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
Sim
1.85
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:34:45) 
-- CODE:
altura1 = float(input("altura: "))
altura2 = float(input("altura: "))

if(altura1 >= 1.37):
	print("Sim")
	print(altura1)
else:(altura>= 1.37)
	print("Nao")
	print(altura2)

-- ERROR:
File "XXXX", line 8
    print("Nao")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:35:00) 
-- CODE:
altura1 = float(input("altura: "))
altura2 = float(input("altura: "))

if(altura1 >= 1.37):
	print("Sim")
	print(altura1)
else(altura>= 1.37):
	print("Nao")
	print(altura2)

-- ERROR:
File "XXXX", line 7
    else(altura>= 1.37):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:35:16) 
-- CODE:
altura1 = float(input("altura: "))
altura2 = float(input("altura: "))

if(altura1 >= 1.37):
	print("Sim")
	print(altura1)
else(altura <= 1.37):
	print("Nao")
	print(altura2)

-- ERROR:
File "XXXX", line 7
    else(altura <= 1.37):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:36:10) 
-- CODE:
altura1 = float(input("altura: "))
altura2 = float(input("altura: "))

if(altura1 >= 1.37):
	print("Sim")
	print(altura1)
else:
	print("Nao")
	print(altura2)

-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:36:19) 
-- CODE:
altura1 = float(input("altura: "))
altura2 = float(input("altura: "))

if(altura1 >= 1.37):
	print("Sim")
	print(altura1)
else:
	print("Nao")
	print(altura2)

-- EXECUTION TIME:
0.152606
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
Nao
1.26
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
Nao
1.53
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
Sim
1.85
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:40:45) 
-- CODE:
altura1 = float(input("altura: "))
altura2 = float(input("altura: "))

if(altura1 >= 1.37):
	print("Sim")
	print(altura1)
else(altura2 <= 1.37:
	print("Nao")
	print(altura2)

-- ERROR:
File "XXXX", line 7
    else(altura2 <= 1.37:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:41:45) 
-- CODE:
altura1 = float(input("altura: "))
altura2 = float(input("altura: "))

if(altura1 >= 1.37):
	print("Sim")
	print(altura1)
else:
	print("Nao")
	print(altura2)

-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:42:06) 
-- CODE:
altura1 = float(input("altura: "))
altura2 = float(input("altura: "))

if(altura1 >= 1.37):
	print("Sim")
	print(altura1)
else:
	print("Nao")
	print(altura2)

-- EXECUTION TIME:
0.173715
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
Nao
1.26
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
Nao
1.53
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
Sim
1.85
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:42:48) 
-- CODE:
altura1 = float(input("altura: "))
altura2 = float(input("altura: "))

if(altura1 >= altura2 == 1.37):
	print("Sim")
	print(altura1)
else:
	print("Nao")
	print(altura2)

-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:43:08) 
-- CODE:
altura1 = float(input("altura: "))
altura2 = float(input("altura: "))

if(altura1 >= altura2 == 1.37):
	print("Sim")
	print(altura1)
else:
	print("Nao")
	print(altura2)

-- EXECUTION TIME:
0.122122
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
Nao
1.26
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
Nao
1.53
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
Nao
1.9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:44:00) 
-- CODE:
altura1 = float(input("altura: "))
altura2 = float(input("altura: "))

if(altura1 >= altura2 == 1.37):
	print("Sim")
	print(altura1)
else:
	print("Nao")
	print(altura2)

-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:44:40) 
-- CODE:
altura1 = float(input("altura: "))
altura2 = float(input("altura: "))

if(altura1 >= 1.37 == altura2 >= 1.37):
	print("Sim")
	print(altura1)
else:
	print("Nao")
	print(altura2)

-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:44:53) 
-- CODE:
altura1 = float(input("altura: "))
altura2 = float(input("altura: "))

if(altura1 >= 1.37 == altura2 >= 1.37):
	print("Sim")
	print(altura1)
else:
	print("Nao")
	print(altura2)

-- EXECUTION TIME:
0.190469
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
Nao
1.26
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
Nao
1.53
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
Nao
1.9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:45:41) 
-- CODE:
altura1 = float(input("altura: "))
altura2 = float(input("altura: "))

if(altura1 >= 1.37):
	print("Sim")
	print(altura1)
else:
	print("Nao")
	print(altura2)

-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:45:52) 
-- CODE:
altura1 = float(input("altura: "))
altura2 = float(input("altura: "))

if(altura1 >= 1.37):
	print("Sim")
	print(altura1)
else:
	print("Nao")
	print(altura2)

-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:46:00) 
-- CODE:
altura1 = float(input("altura: "))
altura2 = float(input("altura: "))

if(altura1 >= 1.37):
	print("Sim")
	print(altura1)
else:
	print("Nao")
	print(altura2)

-- EXECUTION TIME:
0.260973
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
Nao
1.26
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
Nao
1.53
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
Sim
1.85
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 17:58:25) 
-- CODE:
altura1 = float(input("altura: "))
altura2 = float(input("altura: "))

if(altura1 >= 1.37) :
	print("Sim")
	print(altura1)
else:
	print("Nao")
	print(altura2)

-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 18:00:20) 
-- CODE:
altura1 = float(input("altura: "))
altura2 = float(input("altura: "))

if(altura1 >= 1.37) :
	print("Sim")
	print(altura1)
else:
	print("Nao")
	print(altura2)

-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
